--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+
+<div class="userMenu"></div>
+	<main>
+
+	</main>
+
+
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
 </body>
 
